--- a/sidebar/videos.html
+++ b/sidebar/videos.html
@@ -25,8 +25,7 @@ aqui va la api de videos
           type: "GET",
           dataType: "json",
           headers: {
-            "X-API-Token": "215979b6242fdd636897c19bb6428cb5",
-            'Content-Type' : 'application/json; charset=UTF-8'
+            "X-API-Token": "215979b6242fdd636897c19bb6428cb5"
           },
           success: function (result) {
             let data = result.data;
