--- a/sidebar/videos.html
+++ b/sidebar/videos.html
@@ -52,7 +52,7 @@
 
 $(document).ready(function () {
   let urlReferer = "";
-  let api = "?category_id=6064cb5b00adc97db261b719&limit=5";
+  let api = "";
   getVideoList("#blockVideos", api);
 });
 
