--- a/sidebar/videos.html
+++ b/sidebar/videos.html
@@ -26,7 +26,7 @@
 
       function getVideoList(idcontainer, url) {
          $.ajax({
-              url: "https://platform.mediastre.am/api/media" + url,
+              url: "https://platform.mediastre.am/api/show" + url,
               type: "GET",
               dataType: "json",
               headers: {
