--- a/sidebar/videos-playlist.html
+++ b/sidebar/videos-playlist.html
@@ -30,7 +30,7 @@
               type: "GET",
               dataType: "json",
               headers: {
-                  "X-API-Token": "215979b6242fdd636897c19bb6428cb5",
+                  "Access-Control-Allow-Origin": "*"
               },
               contentType: "application/json; charset=utf-8",
               success: function (result) {
@@ -52,7 +52,7 @@
 
 $(document).ready(function () {
   let urlReferer = "";
-  let api = "603e76e0dc619107be83606a";
+  let api = "603e76e0dc619107be83606a?token=215979b6242fdd636897c19bb6428cb5";
   getVideoList("#blockVideos", api);
 });
 
