--- a/sidebar/videos.html
+++ b/sidebar/videos.html
@@ -6,8 +6,15 @@
   <title>Mi api de videos</title>
 </head>
 <body>
+
+
+
+  <div class="p-3 m-2 bg-primary text-white text-center title" id="__block" style="display: none;">Bloque de Videos</div>
   <div id="blockVideos"></div>
 
+
+
+  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="main.js"></script>
 
