--- a/grilla/index.html
+++ b/grilla/index.html
@@ -24,36 +24,10 @@
     <h1 class="text-center">Horarios</h1>
 
     <hr />
-
-    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-lunes"
-          type="button" role="tab" aria-controls="pills-home" aria-selected="true">Lunes</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-          type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Martes</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
-          type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Miercoles</button>
-      </li>
-    </ul>
-    <div class="tab-content" id="pills-tabContent">
-      <div class="tab-pane fade show active" id="pills-lunes" role="tabpanel" aria-labelledby="pills-home-tab">
-        <table id="principalSheet" class="table table-condensed table-bordered"></table>
-      </div>
-      <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-        <table id="martes-data" class="table table-condensed table-bordered"></table>
-      </div>
-      <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-        <table id="miercoles-data" class="table table-condensed table-bordered"></table>
-      </div>
+    <div id="parrilla">
+      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist"></ul>
+      <div class="tab-content" id="pills-tabContent"></div>
     </div>
-
-
-
-
 
 
   </div>
