--- a/conteo/index.html
+++ b/conteo/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medallero</title>
-    <link
-      href="https://allfont.es/allfont.css?fonts=trashhand"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="https://allfont.es/allfont.css?fonts=trashhand" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="main.css" />
 
     <link
@@ -42,9 +38,11 @@
 
       #countdown,
       .bg {
-        background: blueviolet;
         display: flex;
         float: right;
+        position: absolute;
+        top: 14%;
+        right: 7%;
       }
       .puntos {
         line-height: 50px;
@@ -65,8 +63,9 @@
           alt="banner-japon-conteo"
         />
       </div>
+    </div>
 
-      <!-- <div class="bg">
+    <!-- <div class="bg">
         <div class="me-2">
           <div class="numero float-start">4</div>
           <span class="text-warning puntos">:</span>
@@ -87,7 +86,6 @@
           <div class="letra">Días</div>
         </div>
       </div> -->
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
