--- a/popular/index.html
+++ b/popular/index.html
@@ -28,7 +28,13 @@
         <div class="row justify-content-center" id="mostVideos">
         </div>
         <!-- Temporadas -->
-        <div id="shows"></div>
+        <div id="shows" class="shows"></div>
+        <div class="shows">
+            <h4 class="show-title">Playlist personalizado
+            </h4>
+        </div>
+        <div id="playlist" class="shows">
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
