--- a/popular/index.html
+++ b/popular/index.html
@@ -24,17 +24,18 @@
     </div>
     <div id="playVideo" class="d-none"></div>
     <div id="allList" class="mt-5 pt-5 pb-5 container">
-        <div id="titleSection">Top 20 vídeos más vistos</div>
-        <div class="row justify-content-center" id="mostVideos">
-        </div>
+        <div id="titleSection">Ecuavisa Go</div>
+        <!--<div class="row justify-content-center" id="mostVideos">
+        </div>-->
         <!-- Temporadas -->
+        <div id="showsCovers"></div>
         <div id="shows" class="shows"></div>
-        <div class="shows">
+        <!--<div class="shows">
             <h4 class="show-title">Playlist personalizado
             </h4>
         </div>
         <div id="playlist" class="shows">
-        </div>
+        </div>-->
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
