--- a/tabla-medallero-ecuador/index.html
+++ b/tabla-medallero-ecuador/index.html
@@ -16,29 +16,85 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-  
   </head>
 
   <body>
-    <div class="m-2">
-      <div class="">
-         <!-- <div id="medContent"></div> -->
-        <img
-          width="100%"
-          class="b-m-movil"
-          src="https://ecuavisa.com/ecuavisa/main/medallero-t-movil-.png"
-          alt="banner-medallero"
-        />
-        <img
-          class="b-m-desktop"
-          width="100%"
-          src="https://www.ecuavisa.com/ecuavisa/main/medallero-tabla.png"
-          alt="banner-medallero"
-        />
-
+    <div class="">
+      <div id="medContent" class=""></div>
+      <img
+        width="100%"
+        class="b-m-movil"
+        src="https://ecuavisa.com/ecuavisa/main/medallero-t-movil-.png"
+        alt="banner-medallero"
+      />
+      <img
+        class="b-m-desktop"
+        width="100%"
+        src="https://www.ecuavisa.com/ecuavisa/main/medallero-tabla.png"
+        alt="banner-medallero"
+      />
+      <div class="lt">
+        <div id="medContent-ecuador" class="">
+          <div class="letra-ecu">Ecuador</div>
+        </div>
       </div>
-      <div id="medContent-ecuador"></div>
+    </div>
+
+    
+    <div class="mt-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi culpa neque asperiores mollitia amet necessitatibus et? Quibusdam necessitatibus illum, consequuntur odit provident rem cumque voluptatum consectetur perferendis, exercitationem suscipit.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, doloribus! Vitae quae enim sapiente culpa sint dolores? Aliquam, porro, doloremque corporis inventore aspernatur expedita delectus, maxime dicta autem mollitia eos.
+
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus pariatur blanditiis totam et cupiditate ratione repudiandae, asperiores culpa tempora? Maiores eveniet distinctio laborum optio repudiandae numquam quaerat reiciendis vel rerum.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt et tempore dignissimos omnis eligendi delectus vitae, iure dolore libero quasi minima error aspernatur adipisci dolorum qui minus architecto, natus esse?
+
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam voluptates esse dolorem, quasi unde cupiditate molestias rem est nisi exercitationem voluptate praesentium incidunt excepturi aliquam odio molestiae facere placeat possimus?
+    </div>
+    <div class="mt-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi culpa neque asperiores mollitia amet necessitatibus et? Quibusdam necessitatibus illum, consequuntur odit provident rem cumque voluptatum consectetur perferendis, exercitationem suscipit.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, doloribus! Vitae quae enim sapiente culpa sint dolores? Aliquam, porro, doloremque corporis inventore aspernatur expedita delectus, maxime dicta autem mollitia eos.
+
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus pariatur blanditiis totam et cupiditate ratione repudiandae, asperiores culpa tempora? Maiores eveniet distinctio laborum optio repudiandae numquam quaerat reiciendis vel rerum.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt et tempore dignissimos omnis eligendi delectus vitae, iure dolore libero quasi minima error aspernatur adipisci dolorum qui minus architecto, natus esse?
+
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam voluptates esse dolorem, quasi unde cupiditate molestias rem est nisi exercitationem voluptate praesentium incidunt excepturi aliquam odio molestiae facere placeat possimus?
+    </div>
+    <div class="mt-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi culpa neque asperiores mollitia amet necessitatibus et? Quibusdam necessitatibus illum, consequuntur odit provident rem cumque voluptatum consectetur perferendis, exercitationem suscipit.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, doloribus! Vitae quae enim sapiente culpa sint dolores? Aliquam, porro, doloremque corporis inventore aspernatur expedita delectus, maxime dicta autem mollitia eos.
+
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus pariatur blanditiis totam et cupiditate ratione repudiandae, asperiores culpa tempora? Maiores eveniet distinctio laborum optio repudiandae numquam quaerat reiciendis vel rerum.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt et tempore dignissimos omnis eligendi delectus vitae, iure dolore libero quasi minima error aspernatur adipisci dolorum qui minus architecto, natus esse?
+
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam voluptates esse dolorem, quasi unde cupiditate molestias rem est nisi exercitationem voluptate praesentium incidunt excepturi aliquam odio molestiae facere placeat possimus?
+    </div>
+    <div class="mt-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi culpa neque asperiores mollitia amet necessitatibus et? Quibusdam necessitatibus illum, consequuntur odit provident rem cumque voluptatum consectetur perferendis, exercitationem suscipit.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, doloribus! Vitae quae enim sapiente culpa sint dolores? Aliquam, porro, doloremque corporis inventore aspernatur expedita delectus, maxime dicta autem mollitia eos.
+
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus pariatur blanditiis totam et cupiditate ratione repudiandae, asperiores culpa tempora? Maiores eveniet distinctio laborum optio repudiandae numquam quaerat reiciendis vel rerum.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt et tempore dignissimos omnis eligendi delectus vitae, iure dolore libero quasi minima error aspernatur adipisci dolorum qui minus architecto, natus esse?
+
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam voluptates esse dolorem, quasi unde cupiditate molestias rem est nisi exercitationem voluptate praesentium incidunt excepturi aliquam odio molestiae facere placeat possimus?
+    </div>
+    <div class="mt-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi culpa neque asperiores mollitia amet necessitatibus et? Quibusdam necessitatibus illum, consequuntur odit provident rem cumque voluptatum consectetur perferendis, exercitationem suscipit.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, doloribus! Vitae quae enim sapiente culpa sint dolores? Aliquam, porro, doloremque corporis inventore aspernatur expedita delectus, maxime dicta autem mollitia eos.
+
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus pariatur blanditiis totam et cupiditate ratione repudiandae, asperiores culpa tempora? Maiores eveniet distinctio laborum optio repudiandae numquam quaerat reiciendis vel rerum.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt et tempore dignissimos omnis eligendi delectus vitae, iure dolore libero quasi minima error aspernatur adipisci dolorum qui minus architecto, natus esse?
+
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam voluptates esse dolorem, quasi unde cupiditate molestias rem est nisi exercitationem voluptate praesentium incidunt excepturi aliquam odio molestiae facere placeat possimus?
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -48,6 +104,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="main.js"></script>
     <script src="main-ecuador.js"></script>
-
   </body>
 </html>
