--- a/popular/index.html
+++ b/popular/index.html
@@ -72,11 +72,11 @@
     </div>
     <div id="playVideo" class="d-none"></div>
     <div id="showsCoversPortada"></div>
-    <div id="allList" class="mt-5 pt-5 pb-5 container">
+    <div id="allList" class="mt-5 pt-5 pb-5 ms-5 me-5">
         
 
 
-        <div id="titleSection">Ecuavisa Go</div>
+        <div id="titleSectionGo">Ecuavisa Go</div>
         <!--<div class="row justify-content-center" id="mostVideos">
         </div>-->
 
