--- a/popular/index.html
+++ b/popular/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="main.css" />
 
     <style>
-       
+       body{
+        background: #1F2021;
+       }
     </style>
 </head>
 
