--- a/news-template/index.html
+++ b/news-template/index.html
@@ -10,8 +10,13 @@
 <body>
   
 
-  <div class="container">
-    <!-- Content here -->
+  <div class="containergris">
+      <div class="containerblanco">
+        <div class="tit_nota1">
+          <h1 class="text1">5 Claves</h1>
+          <h1 class="text2">Sobre el cacao</h1>
+        </div>
+    </div>
   </div>
 
 
