--- a/news-template/index.html
+++ b/news-template/index.html
@@ -13,8 +13,15 @@
   <div class="containergris">
       <div class="containerblanco">
         <div class="tit_nota1">
+          <img src="https://www.ecuavisa.com/ecuavisa/main/logo_ecuavisa.png">
           <h1 class="text1">5 Claves</h1>
           <h1 class="text2">Sobre el cacao</h1>
+          <img src="https://www.ecuavisa.com/ecuavisa/main/chocolate.jpg">
+          <h2 class="textnew">NUEVO</h2>
+          <h2 class="textpost">POST</h2>
+          <h3 class="url">www.ecuavisa.com</h2>
+            <div class="titulon1">Sector cacaotero continúa al alza: 6.1% más de exportación que en 2020</div>
+            <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
   </div>
