--- a/news-template/index.html
+++ b/news-template/index.html
@@ -12,10 +12,10 @@
 
   <div class="containerblanco">
         <div class="tit_nota1">
-          <img src="https://www.ecuavisa.com/ecuavisa/main/logo_ecuavisa.png">
+          <img class="logoecu" src="https://www.ecuavisa.com/ecuavisa/main/logo_ecuavisa.png">
           <h1 class="text1">5 Claves</h1>
           <h1 class="text2">Sobre el cacao</h1>
-          <img src="https://www.ecuavisa.com/ecuavisa/main/chocolate.jpg">
+          <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/chocolate.jpg">
           <h2 class="textnew">NUEVO</h2>
           <h2 class="textpost">POST</h2>
           <h3 class="url">www.ecuavisa.com</h2>
