--- a/news-template/index.html
+++ b/news-template/index.html
@@ -18,8 +18,10 @@
           <h1 class="text2">Sobre el cacao</h1>
           <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/chocolate.jpg">
           <div class="newpost">
-            <h2 class="textnew">NUEVO</h2>
-            <h2 class="textpost">POST</h2>
+            <div class="bloque1">
+              <h2 class="textnew">NUEVO</h2>
+              <h2 class="textpost">POST</h2>
+            </div>
             <h3 class="url">www.ecuavisa.com</h2>
           </div>
           <div class="titulon1">Sector cacaotero continúa al alza: 6.1% más de exportación que en 2020</div>
