--- a/news-template/index.html
+++ b/news-template/index.html
@@ -1,40 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>News Letters</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="main.css" />
 </head>
+
 <body>
-  
+
 
   <div class="containerblanco">
-        <div class="tit_nota1">
-          <img class="logoecu" src="https://www.ecuavisa.com/ecuavisa/main/logo_ecuavisa.png">
-          <h1 class="text1">5 Claves</h1>
-          <h1 class="text2">Sobre el cacao</h1>
-          <div class="imgpost">
-            <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/chocolate.jpg">
-            <div class="newpost">
-              <div class="bloque1">
-                <h2 class="textnew">NUEVO</h2>
-                <h2 class="textpost">POST</h2>
+    <div class="tit_nota1">
+      <img class="logoecu" src="https://www.ecuavisa.com/ecuavisa/main/logo_ecuavisa.png">
+      <h1 class="title_principal">5 Claves Sobre el cacao</h1>
+      <div class="imgpost">
+        <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/chocolate.jpg">
+        <div class="newpost">
+          <div class="bloque1">
+            <h2 class="textnew">NUEVO</h2>
+            <h2 class="textpost">POST</h2>
+          </div>
+          <h3 class="url">www.ecuavisa.com</h2>
+        </div>
+      </div>
+      <div class="titulon1">Sector cacaotero continúa al alza: 6.1% más de exportación que en 2020</div>
+      <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.
+      </p>
+      <div class="group">
+        <div class="rows">
+          <div class="w-50">
+            <img class="image_big" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao.png">
+          </div>
+          <div class="w-50">
+            <div class="images_s">
+              <div class="image_small">
+                <img src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao2.jpg">
               </div>
-              <h3 class="url">www.ecuavisa.com</h2>
+              <div class="image_small">
+                <img src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao3.jpg">
+              </div>
             </div>
           </div>
-          <div class="titulon1">Sector cacaotero continúa al alza: 6.1% más de exportación que en 2020</div>
-          <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <div class="text_par">
+          <p class="resumen_group">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at mauris pretium, vehicula enim dictum,
+            feugiat nisl.
+            Etiam non massa nisl. Proin lobortis dictum dapibus. Fusce consequat mauris massa, at viverra elit fermentum
+            pulvinar.
+            Aliquam consectetur mi quis sollicitudin laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices
+            posuere cubilia curae; In et massa venenatis, elementum lacus eu, suscipit sapien. Donec viverra vel felis
+            et aliquam.
+            Morbi sit amet arcu ligula. Maecenas nec odio nisl. Suspendisse a feugiat dui, eu auctor metus. Sed ac
+            luctus sapien,
+            sed molestie mi. In hac habitasse platea dictumst. Sed blandit nisi in ipsum dictum vestibulum. Curabitur
+            nisi leo,
+            imperdiet ut sem eu, dapibus rutrum ante.
+          </p>
+          <p class="resumen_group">
+            Donec varius erat mattis, dictum ex sollicitudin, aliquet tortor. Donec pulvinar vitae sapien vel vulputate.
+            Etiam eu
+            est mi. Donec hendrerit aliquam eros a blandit. Vestibulum eleifend dui in turpis semper feugiat. Phasellus
+            faucibus,
+            diam in facilisis lobortis, eros magna aliquet nibh, vel dignissim neque purus at ipsum. Fusce a turpis
+            elit. Nunc id
+            ligula sapien. Pellentesque mattis sed purus a sagittis. Maecenas rutrum lacus ac gravida efficitur.
+            Maecenas
+            consectetur nec nisl nec consequat. Proin pulvinar, erat sed blandit accumsan, diam massa auctor ex, quis
+            hendrerit
+            libero velit vitae nisi. Praesent eleifend arcu elementum diam convallis sagittis. Sed laoreet, nisi eget
+            gravida
+            euismod, metus magna facilisis nunc, et fermentum sapien metus non felis. Proin vel purus non orci feugiat
+            gravida eu
+            lobortis nibh. Aliquam erat volutpat.
           </p>
         </div>
+        <div class="btn-center">
+          <a class="btn-nota" href="#">Leer nota completa</a>
+        </div>
+      </div>
+      <!-- Bloque 2 -->
+      <h2 class="title_principal">Lorem ipsum dolor sit amet</h2>
+      <div class="imgpost">
+        <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/paisaje.png">
+      </div>
+      <div class="group">
+        <div class="rows">
+          <div class="w-50">
+            <img class="image_big" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao.png">
+          </div>
+          <div class="w-50">
+            <div class="images_s">
+              <div class="image_small">
+                <img src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao2.jpg">
+              </div>
+              <div class="image_small">
+                <img src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao3.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Bloque 3 -->
+      <h2 class="title_principal">Lorem ipsum dolor sit amet</h2>
+      <div class="imgpost">
+        <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/paisaje.png">
+      </div>
+      <div class="titulon1">Sector cacaotero continúa al alza: 6.1% más de exportación que en 2020</div>
+      <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.
+      </p>
+      <div class="group">
+        <div class="rows">
+          <div class="w-50">
+            <img class="image_big" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao.png">
+          </div>
+          <div class="w-50">
+            <div class="images_s">
+              <div class="image_small">
+                <img src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao2.jpg">
+              </div>
+              <div class="image_small">
+                <img src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao3.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ./Bloque 3 -->
+    </div>
   </div>
-
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
