--- a/news-template/index.html
+++ b/news-template/index.html
@@ -92,7 +92,38 @@
       <div class="imgpost">
         <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/paisaje.png">
       </div>
-      <div class="group">
+      <div class="group pt-0">
+        <div class="rows">
+          <div class="w-60 bg-blue">
+            <div class="bg-text">
+              <p class="resumen_group_blue">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at mauris pretium, vehicula enim dictum,
+                feugiat nisl.
+                Etiam non massa nisl. Proin lobortis dictum dapibus. Fusce consequat mauris massa, at viverra elit
+                fermentum
+                pulvinar.
+                Aliquam consectetur mi quis sollicitudin laoreet. Vestibulum ante ipsum primis in faucibus orci luctus
+                et
+                ultrices
+                posuere cubilia curae; In et massa venenatis, elementum lacus eu, suscipit sapien. Donec viverra vel
+                felis
+                et aliquam.
+                Morbi sit amet arcu ligula. Maecenas nec odio nisl. Suspendisse a feugiat dui, eu auctor metus. Sed ac
+                luctus sapien,
+                sed molestie mi. In hac habitasse platea dictumst. Sed blandit nisi in ipsum dictum vestibulum.
+                Curabitur
+                nisi leo,
+                imperdiet ut sem eu, dapibus rutrum ante.
+              <div class="btn-center">
+                <a class="btn-nota" href="#">Leer nota completa</a>
+              </div>
+              </p>
+            </div>
+          </div>
+          <div class="w-40">
+            <img class="image_big" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao.png">
+          </div>
+        </div>
         <div class="rows">
           <div class="w-50">
             <img class="image_big" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/cacao.png">
@@ -136,6 +167,9 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="btn-center" style="margin-top: 35px;">
+          <a class="btn-nota" href="#">Leer nota completa</a>
         </div>
       </div>
       <!-- ./Bloque 3 -->
