--- a/news-template/index.html
+++ b/news-template/index.html
@@ -93,7 +93,7 @@
         <img class="imgn1" src="https://www.ecuavisa.com/ecuavisa/main/newsletter/paisaje.png">
       </div>
       <div class="group pt-0">
-        <div class="rows">
+        <div class="rows first">
           <div class="w-60 bg-blue">
             <div class="bg-text">
               <p class="resumen_group_blue">
