--- a/news-template/index.html
+++ b/news-template/index.html
@@ -65,7 +65,7 @@
             nisi leo,
             imperdiet ut sem eu, dapibus rutrum ante.
           </p>
-          <p class="resumen_group">
+          <p class="resumen_group second">
             Donec varius erat mattis, dictum ex sollicitudin, aliquet tortor. Donec pulvinar vitae sapien vel vulputate.
             Etiam eu
             est mi. Donec hendrerit aliquam eros a blandit. Vestibulum eleifend dui in turpis semper feugiat. Phasellus
