--- a/gaby-template/index.html
+++ b/gaby-template/index.html
@@ -28,6 +28,10 @@
 </div>
 
 
+<img src="https://i.imgur.com/RcqFJuy.png" alt="imagen">
+        <div> estamos presentado</div>
+        <div> Televistazo</div>
+
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
