--- a/gaby-template/index.html
+++ b/gaby-template/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Test css html</title>
+<title>EN VIVO</title>
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,16 +14,20 @@
   <div class="inner"></div>
 </div>
 
-
-<img src="https://i.imgur.com/RcqFJuy.png" alt="imagen">
-        <div> estamos presentado</div>
-        <div> Televistazo</div>
+  <div class="contenedor">
+    <img src="https://i.imgur.com/RcqFJuy.png" alt="imagen">
+    <h2 class="ms-5">Estamos Presentado</h1>
+    <h1 class="ms-5"> Televistazo 13h00</h2>
+    <a href="https://www.ecuavisa.com/envivo" class="ms-5 btn btn-primary stretched-link ">VER EN VIVO</a>
+  </div>
 
 
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+ <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   <script src="functions.js"></script>
 </html>
+
+
