--- a/gaby-template/index.html
+++ b/gaby-template/index.html
@@ -10,17 +10,18 @@
 </head>
 
 
-<div class="container">
+<div class="contenedor">
   <div class="inner"></div>
 </div>
 
-  <div class="contenedor">
-    <img src="https://i.imgur.com/RcqFJuy.png" alt="imagen">
-    <h2 class="ms-5">Estamos Presentado</h1>
-    <h1 class="ms-5"> Televistazo 13h00</h2>
-    <a href="https://www.ecuavisa.com/envivo" class="ms-5 btn btn-primary stretched-link ">VER EN VIVO</a>
-  </div>
-
+  <!-- <div class="contenedor">
+    <div>
+      <img  src="https://i.imgur.com/RcqFJuy.png" alt="imagen">
+      <h2 class="ms-5">Estamos Presentado</h1>
+      <h1 class="ms-5"> Televistazo 13h00</h2>
+      <a href="https://www.ecuavisa.com/envivo" class="ms-5 btn btn-primary stretched-link ">VER EN VIVO</a>
+    </div>
+  </div> -->
 
 
 
