--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -7,5 +7,20 @@
 </head>
 <body>
 
+  <div class="apertura_fotos">
+    <span class="apertura_fotos_a">
+      <picture>
+        <source media="(max-width: 999px)" srcset="//ep01.epimg.net/estaticos/arc/2021/11/teletrabajo/img/apertura-a-m.jpg">
+        <img src="//ep01.epimg.net/estaticos/arc/2021/11/teletrabajo/img/apertura-a.jpg" alt="Persona con teletrabajo">
+      </picture>
+    </span>
+    <span class="apertura_fotos_b">
+      <picture>
+        <source media="(max-width: 999px)" srcset="//ep01.epimg.net/estaticos/arc/2021/11/teletrabajo/img/apertura-b-m.jpg">
+        <img src="//ep01.epimg.net/estaticos/arc/2021/11/teletrabajo/img/apertura-b.jpg" alt="Persona en la oficina">
+      </picture>
+    </span>
+  </div>
+
 </body>
 </html>
