--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>ANIMACION</title>
-
-  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-
   <div class="apertura_fotos">
     <span class="apertura_fotos_a">
       <picture>
@@ -24,3 +24,6 @@
 
 </body>
 </html>
+
+
+
