--- a/gaby-animacion/index.html
+++ b/gaby-animacion/index.html
@@ -31,7 +31,11 @@
       </div>
     </div>
 
-    <div>hola sii</div>
+    <div class="textvideo">
+      <h1 class="">HORA PUNTA</h1>
+      <h2 class="">Nuria González, directora de soluciones innovadoras de Novartis Farmacéutica, empieza el día desayunando en la cocina de su madre, enfermera jubilada de 70 años que debido a una caída está inmovilizada: “Hace dos años esto sería impensable, trabajar y atender a mi madre en los descansos”. Raquel Coca, directora de innovación y operaciones para el cliente de Novartis Oncología, desayuna con sus hijos pequeños a las ocho de la mañana en su casa de Villaviciosa de Odón, Madrid. Está amaneciendo cuando encara la M-30 y tras 45 minutos de trayecto llega a la oficina: “Si hay atasco, voy haciendo reuniones con el manos libres desde el coche, así no pierdo el tiempo”.</h2>
+      <h2 class=""><b>Seleccione qué vídeo quiere ver</b></h2>
+    </div>
 
     <script>
       document
